--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "camelcase-keys": "^9.1.3",
     "express": "^5.1.0",
     "pino": "^9.6.0"
   },
