--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "camelcase-keys": "^9.1.3",
     "express": "^5.1.0",
-    "pino": "^9.6.0"
+    "pg": "^8.15.1",
+    "pino": "^9.6.0",
+    "snakecase-keys": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
+    "@types/pg": "^8.11.13",
     "eslint": "^9.25.1",
     "pino-pretty": "^13.0.0",
     "tsx": "^4.19.3",
