Save user on DDBB

--- a/apps/back/.env.example
+++ b/apps/back/.env.example
@@ -1,5 +1,8 @@
 # SERVER
 PORT=8080
+COOKIE_SECRET=obSYsdQ/jW/k5qj+cxFwduirq3zXoR5CQAnd0WcLe8Y=
+COOKIE_MAX_AGE=2592000000
+COOKIE_SECURE=false
 
 # LOGGER
 LOG_LEVEL=debug
