--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "camelcase-keys": "^9.1.3",
+    "connect-pg-simple": "^10.0.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "pg": "^8.15.1",
     "pino": "^9.6.0",
     "snakecase-keys": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
+    "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.1",
     "@types/node": "^22.14.0",
     "@types/pg": "^8.11.13",
     "eslint": "^9.25.1",
