--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -fr dist && tsc && tsc-alias",
     "dev": "tsx --watch --inspect --env-file=.env src/index.ts | pino-pretty",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit"
@@ -27,6 +27,7 @@
     "@types/pg": "^8.11.13",
     "eslint": "^9.25.1",
     "pino-pretty": "^13.0.0",
+    "tsc-alias": "^1.8.15",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
