--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "ajv": "8.11.0",
     "camelcase-keys": "^9.1.3",
     "connect-pg-simple": "^10.0.0",
     "express": "^5.1.0",
