--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -30,6 +30,7 @@
     "pino-pretty": "^13.0.0",
     "tsc-alias": "^1.8.15",
     "tsx": "^4.19.3",
+    "type-fest": "^4.40.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
   }
