--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 POSTGRES_DB=spotyvoice
 POSTGRES_USER=spotyvoice
 POSTGRES_PASSWORD=spotyvoice
+REDIS_PASSWORD=spotyvoice
 
 # Migrations
 DATABASE_URL=postgresql://spotyvoice:spotyvoice@localhost:5432/spotyvoice
