--- a/apps/back/.env.example
+++ b/apps/back/.env.example
@@ -12,6 +12,10 @@ POSTGRES_DB=spotyvoice
 POSTGRES_USER=spotyvoice
 POSTGRES_PASSWORD=spotyvoice
 
+# REDIS
+REDIS_DB=0
+REDIS_PASSWORD=spotyvoice
+
 # SPOTIFY
 SPOTIFY_CLIENT_ID=b98c5c68a68e41678ad2e1900b23137d
 SPOTIFY_CLIENT_SECRET=842f36d4eb9b43169e61b59103f4dd7a
