--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "ajv": "8.11.0",
     "camelcase-keys": "^9.1.3",
-    "connect-pg-simple": "^10.0.0",
+    "connect-redis": "^8.0.3",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "ioredis": "^5.6.1",
     "pg": "^8.15.1",
     "pino": "^9.6.0",
     "snakecase-keys": "^8.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
-    "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/node": "^22.14.0",
