--- a/apps/front/package.json
+++ b/apps/front/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
     "react-router": "^7.5.1",
     "tailwindcss": "^4.1.4"
   },
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-modal": "^3.16.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-dom": "^1.48.4",
