--- a/apps/back/package.json
+++ b/apps/back/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ajv": "8.11.0",
+    "ajv-formats": "^3.0.1",
     "camelcase-keys": "^9.1.3",
     "connect-redis": "^8.0.3",
     "express": "^5.1.0",
