Modifications for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Docker compose
-POSTGRES_DB=spotyvoice
-POSTGRES_USER=spotyvoice
-POSTGRES_PASSWORD=spotyvoice
-REDIS_PASSWORD=spotyvoice
+POSTGRES_DB=musicpoll
+POSTGRES_USER=musicpoll
+POSTGRES_PASSWORD=musicpoll
+REDIS_PASSWORD=musicpoll
 
 # Migrations
-DATABASE_URL=postgresql://spotyvoice:spotyvoice@localhost:5432/spotyvoice
+DATABASE_URL=postgresql://musicpoll:musicpoll@localhost:5432/musicpoll
