--- a/apps/back/.env.example
+++ b/apps/back/.env.example
@@ -3,18 +3,21 @@ PORT=8080
 COOKIE_SECRET=obSYsdQ/jW/k5qj+cxFwduirq3zXoR5CQAnd0WcLe8Y=
 COOKIE_MAX_AGE=2592000000
 COOKIE_SECURE=false
+TRUST_PROXY=
+
+FRONTEND_BASEURL=http://localhost:5173
 
 # LOGGER
 LOG_LEVEL=debug
 
 # POSTGRES
-POSTGRES_DB=spotyvoice
-POSTGRES_USER=spotyvoice
-POSTGRES_PASSWORD=spotyvoice
+POSTGRES_DB=musicpoll
+POSTGRES_USER=musicpoll
+POSTGRES_PASSWORD=musicpoll
 
 # REDIS
 REDIS_DB=0
-REDIS_PASSWORD=spotyvoice
+REDIS_PASSWORD=musicpoll
 
 # SPOTIFY
 SPOTIFY_CLIENT_ID=b98c5c68a68e41678ad2e1900b23137d
