--- a/apps/back/.env.example
+++ b/apps/back/.env.example
@@ -5,7 +5,7 @@ COOKIE_MAX_AGE=2592000000
 COOKIE_SECURE=false
 TRUST_PROXY=
 
-FRONTEND_BASEURL=http://localhost:5173
+FRONTEND_BASEURL=http://127.0.0.1:5173
 
 # LOGGER
 LOG_LEVEL=debug
